--- a/source/stylesheets/modules/_cards.scss
+++ b/source/stylesheets/modules/_cards.scss
@@ -327,7 +327,10 @@ $datetime-bg: $primary;
 
 .card--list__text{
   flex-grow: 1;
+  flex-shrink: 1;
   display: inline-flex;
+  flex-wrap: wrap;
+  overflow: hidden;
   align-items: center;
   padding: 1rem 1rem 1rem 0;
   .card--list--mini &{
